stylesheets/styles.scss
/* ... */
#portfolio-grid {
  .portfolio-grid-item {
    padding: 0.625em; // Default has extra bottom padding and no top padding - this makes it equal all around
    @include transition (opacity 100ms ease-in);
    // The following CSS fixes a rendering bug that causes the width of the images to 'jog' by a pixel when
    // fading in/out. More info: http://stackoverflow.com/questions/15152470/chrome-rendering-issue-fixed-position-anchor-with-ul-in-body/15203880#15203880
    -webkit-transform: translateZ(0);
    &.faded {
      @media #{$small} {
        opacity: 0.25;
      }
    }
    &:hover {
      background-color: rgba(0,0,0,0.1);
    }
  }
  img {
    width: 100%;
  }
  a {
    // Disable highlighting that occurs on tap
    // See here: http://phonegap-tips.com/articles/essential-phonegap-css-webkit-tap-highlight-color.html
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    -webkit-tap-highlight-color: transparent; /* For some Androids */
    &:hover {
      // Override default link behavior
      text-decoration: none;
    }
  }
  .portfolio-name {
    position: relative;
    .caption {
      margin-top: 5px;
      color: $black;
      font-weight: bold;
      line-height: 16px;
      @media #{$small-only} {
        font-size: 14px;
        line-height: 14px;
      }
    }
    .subtitle {
      font-size: 12px;
      color: #777;
      font-weight: normal;
    }
  }
}
#talks {
  iframe {
    width: 100%;
    height: 100%;
  }
}

// OTHER PAGES
#project  {
  .slideshow-wrapper {
    min-height: 200px;
    &.legacy {
      max-width: 650px;
    }
  }
  .project-images {
  }
  .orbit-bullets {
    margin-bottom: 10px;
  }
  .project-title {
    margin-top: 20px;
  }
  .project-data .row {
    line-height: rem-calc(24);
  }
  .project-data-key {
    font-size: 80%;
    text-transform: uppercase;
    color: gray;
  }
  .project-description {
    margin-top: 16px;
  }
  // Orbit tweaks
  .orbit-container {
    .orbit-prev,
    .orbit-next {
      top: 50%;
      margin-top: -60px;
    }
    .orbit-caption {
      @media #{$small-only} {
        position: relative;
        padding-top: 5px;
        padding-bottom: 5px;
      }
    }
  }
}

#resume {
  padding-top: 20px;
  .subtitle {
    margin: 0;
    font-weight: bold;
    color: gray;
    position: relative;
    top: -14px;
    left: 2px;
  }
}

#resume, #project {
  padding-bottom: 20px;
  @media #{$medium} {
    padding-bottom: 30px;
  }
}

#templates {
  display: none;
}

// STUFF
.external-link {
  font-size: 80%;
  white-space: nowrap;
}

a.button {
  // Overrides default foundation behavior (transitioning background color on hover)
  @include transition (background-color 0s);
  box-shadow: none;
  -webkit-box-shadow: none;
  &:hover, &:active {
    text-decoration: none;
  }
}

div.epilogue {
  color: darken($background-color, 45%);
  .quote {
    &::after {
      content: '“';
    }
    &::before {
      content: '”';
    }
  }
  .author {
    text-transform: uppercase;
    font-size: rem-calc(10);
    white-space: nowrap;
    &::before {
      content: '— ';
    }
  }
}

.browsehappy {
  background-color: #ffffef;
  margin: 0;
  padding: 5px 20px;
  border-bottom: 1px solid lightgray;
  z-index: 9999;
}

